    analysis.dihedrals.Janin analysis to give user more fine grained control
    over selections (PR #2899)
  * Improved performance of select_atoms on strings (e.g. name, type, resname) and
    'protein' selection (#2751 PR #2755)
  * Added an RDKit converter that works for any input with all hydrogens
    explicit in the topology (Issue #2468, PR #2775)

Changes
  * deprecated NumPy type aliases have been replaced with their actual types
    (see upstream NumPy PR 14882), and our pytest configuration will raise an
    error for any violation when testing with development NumPy builds
    (`1.20.0`)
  * Changes development status from Beta to Mature (Issue #2773)
  * Removes deprecated MDAnalysis.analysis.hole, please use
    MDAnalysis.analysis.hole2.hole instead (Issue #2739)
  * Replaces use of mock in favour of unittest.mock (Issue #2777)
  * Removes support for passing `atoms` to XYZWriter. (Issue #2739, PR #2754)
  * Removes; deprecated support for using Writer.write(Timestep), deprecated
    Writer.write_next_timestep, use write() instead. (Issue #2739)
  * Removes deprecated density_from_Universe, density_from_PDB, Bfactor2RMSF,
    and notwithin_coordinates_factory from MDAnalysis.analysis.density
    (Issue #2739)
  * Removes deprecated ProgressMeter (Issue #2739)
  * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)
  * Dropped Python 2 support
  * Set Python 3.6 as the minimum supported version (Issue #2541)
  * Changes the minimal NumPy version to 1.16.0 (Issue #2827, PR #2831)
  * Sets the minimal RDKit version for CI to 2020.03.1 (Issue #2827, PR #2831)
  * Removes deprecated waterdynamics.HydrogenBondLifetimes (PR #2842)
  * Make NeighborSearch return empty atomgroup, residue, segments instead of list (Issue #2892, PR #2907)

Deprecations

06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,