@@ -150,7 +150,7 @@ the OPLS/AA force field.
 
 """
 
-__all__ = ['Universe', 'as_Universe', 'Writer', 'fetch_mmtf',
+__all__ = ['Universe', 'Writer', 'fetch_mmtf',
            'AtomGroup', 'ResidueGroup', 'SegmentGroup']
 
 import logging
@@ -202,7 +202,7 @@ warnings.filterwarnings(action='once', category=DeprecationWarning,
 from . import units
 
 # Bring some often used objects into the current namespace
-from .core.universe import Universe, as_Universe, Merge
+from .core.universe import Universe, Merge
 from .core.groups import AtomGroup, ResidueGroup, SegmentGroup
 from .coordinates.core import writer as Writer
 
